Added branch name to publish-to-github-action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,3 +92,4 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/trunk'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH_NAME: 'trunk'
