--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
-    "@vue/cli-plugin-babel": "~4.5.7",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.7",
-    "@vue/cli-plugin-eslint": "~4.5.7",
-    "@vue/cli-plugin-router": "~4.5.7",
-    "@vue/cli-plugin-typescript": "~4.5.7",
-    "@vue/cli-service": "~4.5.7",
+    "@vue/cli-plugin-babel": "^4.5.7",
+    "@vue/cli-plugin-e2e-cypress": "^4.5.7",
+    "@vue/cli-plugin-eslint": "^4.5.7",
+    "@vue/cli-plugin-router": "^4.5.7",
+    "@vue/cli-plugin-typescript": "^4.5.7",
+    "@vue/cli-service": "^4.5.7",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-standard": "^5.1.2",
-    "@vue/eslint-config-typescript": "^6.0.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-istanbul": "^6.0.0",
     "check-code-coverage": "^1.10.0",
