--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-cli-template",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve",
@@ -13,19 +13,21 @@
     "core-js": "^3.6.5",
     "tailwindcss": "^1.9.6",
     "vue": "^3.0.2",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.12.1",
     "@cypress/code-coverage": "^3.8.2",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.5.0",
-    "@vue/cli-plugin-babel": "^4.5.7",
-    "@vue/cli-plugin-e2e-cypress": "^4.5.7",
-    "@vue/cli-plugin-eslint": "^4.5.7",
-    "@vue/cli-plugin-router": "^4.5.7",
-    "@vue/cli-plugin-typescript": "^4.5.7",
+    "@types/cypress": "^1.1.3",
+    "@types/webpack-env": "^1.15.3",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "@vue/cli-plugin-babel": "^4.5.8",
+    "@vue/cli-plugin-e2e-cypress": "^4.5.8",
+    "@vue/cli-plugin-eslint": "^4.5.8",
+    "@vue/cli-plugin-router": "^4.5.8",
+    "@vue/cli-plugin-typescript": "^4.5.8",
     "@vue/cli-service": "^4.5.8",
     "@vue/compiler-sfc": "^3.0.2",
     "@vue/eslint-config-standard": "^5.1.2",
@@ -33,18 +35,18 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-istanbul": "^6.0.0",
     "check-code-coverage": "^1.10.0",
-    "eslint": "^7.11.0",
+    "eslint": "^7.12.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.2",
     "eslint-plugin-vue": "^7.1.0",
     "nyc": "^15.1.0",
-    "typescript": "^4.0.3",
+    "typescript": "^4.0.5",
     "vue-cli-plugin-tailwind": "^1.5.0"
   },
   "resolutions": {
-    "cypress": "^5.3.0"
+    "cypress": "^5.5.0"
   },
   "nyc": {
     "reporter": [
