--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,8 @@ test:
     name: cypress/included:5.5.0
     entrypoint: [""]
   script:
-    - export
+    # Uncomment for debugging
+    # - export
     - yarn cache dir
     - cd -- "$CI_PROJECT_DIR"
     - yarn --frozen-lockfile
