--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-cli-template",
-  "version": "0.4.0",
+  "version": "0.6.0",
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve",
@@ -10,16 +10,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.2.0",
     "core-js": "^3.6.5",
     "tailwindcss": "^1.9.6",
     "vue": "^3.0.2",
-    "vue-router": "^4.0.0-rc.1"
+    "vue-router": "^4.0.0-rc.1",
+    "vuex": "^4.0.0-beta.4"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.12.1",
     "@cypress/code-coverage": "^3.8.2",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/cypress": "^1.1.3",
+    "@types/node": "^14.14.6",
     "@types/webpack-env": "^1.15.3",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
