--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-cli-template",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve",
@@ -15,11 +15,11 @@
     "tailwindcss": "^1.9.6",
     "vue": "^3.0.2",
     "vue-router": "^4.0.0-rc.1",
-    "vuex": "^4.0.0-beta.4"
+    "vuex": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.12.1",
-    "@cypress/code-coverage": "^3.8.2",
+    "@cypress/code-coverage": "^3.8.3",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/cypress": "^1.1.3",
     "@types/node": "^14.14.6",
