--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-cli-template",
-  "version": "0.8.0",
-  "private": true,
+  "version": "0.8.1",
+  "license": "MIT",
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -14,7 +14,7 @@
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.3.1",
     "core-js": "^3.7.0",
-    "tailwindcss": "^2.0.1-compat",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^3.0.2",
     "vue-router": "^4.0.0-rc.3",
     "vuex": "^4.0.0-rc.1"
