--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-cli-template",
-  "version": "0.8.2",
+  "version": "0.8.3",
   "license": "MIT",
   "scripts": {
     "dev": "vue-cli-service serve",
@@ -10,47 +10,49 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@tailwindcss/aspect-ratio": "^0.2.0",
-    "@tailwindcss/forms": "^0.2.1",
-    "@tailwindcss/typography": "^0.3.1",
-    "core-js": "^3.7.0",
+    "@tailwindcss/aspect-ratio": "^0.2",
+    "@tailwindcss/forms": "^0.2",
+    "@tailwindcss/typography": "^0.3",
+    "autoprefixer": "^9",
+    "core-js": "^3.8",
+    "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "vue": "^3.0.2",
-    "vue-router": "^4.0.0-rc.5",
-    "vuex": "^4.0.0-rc.1"
+    "vue": "^3.0",
+    "vue-router": "^4.0",
+    "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
-    "@cypress/code-coverage": "^3.8.5",
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/cypress": "^1.1.3",
-    "@types/node": "^14.14.9",
-    "@types/webpack-env": "^1.15.3",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
-    "@vue/cli-plugin-babel": "^4.5.9",
-    "@vue/cli-plugin-e2e-cypress": "^4.5.9",
-    "@vue/cli-plugin-eslint": "^4.5.9",
-    "@vue/cli-plugin-router": "^4.5.9",
-    "@vue/cli-plugin-typescript": "^4.5.9",
-    "@vue/cli-service": "^4.5.9",
-    "@vue/compiler-sfc": "^3.0.2",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "babel-loader": "^8.2.1",
-    "babel-plugin-istanbul": "^6.0.0",
-    "check-code-coverage": "^1.10.0",
-    "eslint": "^7.14.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^7.1.0",
-    "nyc": "^15.1.0",
-    "typescript": "^4.1.2"
+    "@babel/plugin-proposal-optional-chaining": "^7.12",
+    "@cypress/code-coverage": "^3.8",
+    "@istanbuljs/nyc-config-typescript": "^1.0",
+    "@types/cypress": "^1.1",
+    "@types/node": "^14.14",
+    "@types/webpack-env": "^1.16",
+    "@typescript-eslint/eslint-plugin": "^4.9",
+    "@typescript-eslint/parser": "^4.9",
+    "@vue/cli-plugin-babel": "^4.5",
+    "@vue/cli-plugin-e2e-cypress": "^4.5",
+    "@vue/cli-plugin-eslint": "^4.5",
+    "@vue/cli-plugin-router": "^4.5",
+    "@vue/cli-plugin-typescript": "^4.5",
+    "@vue/cli-service": "^4.5",
+    "@vue/compiler-sfc": "^3.0",
+    "@vue/eslint-config-standard": "^6.0",
+    "@vue/eslint-config-typescript": "^7.0",
+    "babel-loader": "^8.2",
+    "babel-plugin-istanbul": "^6.0",
+    "check-code-coverage": "^1.10",
+    "eslint": "^7.15",
+    "eslint-plugin-import": "^2.22",
+    "eslint-plugin-node": "^11.1",
+    "eslint-plugin-promise": "^4.2",
+    "eslint-plugin-standard": "^5.0",
+    "eslint-plugin-vue": "^7.2",
+    "nyc": "^15.1",
+    "typescript": "^4.1"
   },
   "resolutions": {
-    "cypress": "^5.6.0"
+    "cypress": "^6.0"
   },
   "nyc": {
     "reporter": [
