--- a/package.json
+++ b/package.json
@@ -19,17 +19,16 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "~3.0",
     "vue-router": "~4.0",
-    "vuex": "^4.0.0-rc.2"
+    "vuex": "~4.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "~7.12",
     "@cypress/code-coverage": "~3.9",
     "@istanbuljs/nyc-config-typescript": "~1.0",
-    "@types/cypress": "~1.1",
     "@types/node": "~14.14",
     "@types/webpack-env": "~1.16",
-    "@typescript-eslint/eslint-plugin": "~4.13",
-    "@typescript-eslint/parser": "~4.13",
+    "@typescript-eslint/eslint-plugin": "~4.14",
+    "@typescript-eslint/parser": "~4.14",
     "@vue/cli-plugin-babel": "~4.5",
     "@vue/cli-plugin-e2e-cypress": "~4.5",
     "@vue/cli-plugin-eslint": "~4.5",
@@ -42,17 +41,17 @@
     "babel-loader": "~8.2",
     "babel-plugin-istanbul": "~6.0",
     "check-code-coverage": "~1.10",
-    "eslint": "~7.18",
+    "eslint": "~7.19",
     "eslint-plugin-import": "~2.22",
     "eslint-plugin-node": "~11.1",
     "eslint-plugin-promise": "~4.2",
     "eslint-plugin-standard": "~5.0",
-    "eslint-plugin-vue": "~7.4",
+    "eslint-plugin-vue": "~7.5",
     "nyc": "~15.1",
     "typescript": "~4.1"
   },
   "resolutions": {
-    "cypress": "^6.2"
+    "cypress": "^6.4"
   },
   "nyc": {
     "reporter": [
